add: serialize/deserialize feature

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   gesture_recorder:
     path: ../
   scribble: ^0.10.0+1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
